--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <meta property="og:title" content="Hotel Data Analytics Portfolio | Ayman Salem" />
   <meta property="og:description" content="Explore data-driven insights into hotel performance. Forecasting, booking pace, and pricing analysis visualized with Tableau and Python." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://yourdomain.com" />
-  <meta property="og:image" content="https://yourdomain.com/assets/preview.jpg" />
+  <meta property="og:url" content="https://aymansalem.github.io/portfolio/" />
+  <meta property="og:image" content="https://aymansalem.github.io/portfolio/assets/preview.jpg" />
   
-  <link rel="canonical" href="https://yourdomain.com" />
+  <link rel="canonical" href="https://aymansalem.github.io/portfolio/" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="styles.css" />
 </head>
