--- a/Forc_vs_Actual.html
+++ b/Forc_vs_Actual.html
@@ -10,9 +10,9 @@
   <meta property="og:title" content="Forecasting & Booking Pace Dashboard | Ayman Salem" />
   <meta property="og:description" content="Data visualization of room demand trends, forecast performance, and ADR segmentation across seasons. Built with Tableau and SQL." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://yourdomain.com/Forc_vs_Actual.html" />
+  <meta property="og:url" content="https://aymansalem.github.io/portfolio/Forc_vs_Actual.html" />
   <meta property="og:image" content="https://yourdomain.com/assets/preview-booking.png" />
-  <link rel="canonical" href="https://yourdomain.com/Forc_vs_Actual.html" />
+  <link rel="canonical" href="https://aymansalem.github.io/portfolio/Forc_vs_Actual.html" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="styles.css" />
 </head>
