--- a/booking_pace.html
+++ b/booking_pace.html
@@ -10,9 +10,9 @@
   <meta property="og:title" content="ADR & Channel Analysis Dashboard | Ayman Salem" />
   <meta property="og:description" content="Explore rate trends, segment contribution, and monthly variance insights across multiple hotel channels from 2018 to 2020." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://yourdomain.com/adr.html" />
-  <meta property="og:image" content="https://yourdomain.com/assets/preview-adr.png" />
-  <link rel="canonical" href="https://yourdomain.com/adr.html" />
+  <meta property="og:url" content="https://aymansalem.github.io/portfolio/adr.html" />
+  <meta property="og:image" content="https://aymansalem.github.io/portfolio/assets/preview-adr.png" />
+  <link rel="canonical" href="https://aymansalem.github.io/portfolio/adr.html" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="styles.css" />
   
