--- a/index.html
+++ b/index.html
@@ -4,14 +4,44 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Hotel Data Analytics Portfolio | Ayman Salem</title>
+
+  <!-- Primary Meta Tags -->
   <meta name="description" content="Explore Ayman Salem's hotel data analytics projects using Tableau, SQL, and Python. Focused on booking pace, ADR, forecast accuracy, and revenue trends." />
   <meta name="keywords" content="Hotel Data Analytics, Revenue Management, Tableau, Python, SQL, ADR, Booking Pace, Forecast vs Actual, Hospitality Insights, Ayman Salem" />
   <meta name="author" content="Ayman Salem" />
+  <link rel="canonical" href="https://aymansalem.github.io/portfolio/" />
+
+  <!-- Open Graph / Facebook -->
   <meta property="og:title" content="Hotel Data Analytics Portfolio | Ayman Salem" />
   <meta property="og:description" content="Explore data-driven insights into hotel performance. Forecasting, booking pace, and pricing analysis visualized with Tableau and Python." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://aymansalem.github.io/portfolio/" />
   <meta property="og:image" content="https://aymansalem.github.io/portfolio/assets/preview.jpg" />
+
+  <!-- Structured Data (JSON-LD) -->
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "Ayman Salem Portfolio",
+  "url": "https://aymansalem.github.io/",
+  "potentialAction": {
+    "@type": "SearchAction",
+    "target": "https://aymansalem.github.io/?q={search_term_string}",
+    "query-input": "required name=search_term_string"
+  }
+}
+</script>
+
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="styles.css" />
+
+
+  <!-- Your content here -->
+
+
   
   <link rel="canonical" href="https://aymansalem.github.io/portfolio/" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
