--- a/about.html
+++ b/about.html
@@ -1,9 +1,34 @@
-<!-- about.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- JSON-LD Structured Data for Person -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Ayman Salem",
+    "url": "https://aymansalem.github.io/",
+    "sameAs": [
+      "https://www.linkedin.com/in/ayman-h-salem/",
+      "https://github.com/aymansalem"
+    ],
+    "jobTitle": "Hotel Revenue Optimization Specialist",
+    "worksFor": {
+      "@type": "Organization",
+      "name": "Independent Portfolio"
+    }
+  }
+  </script>
+
+  <title>Hotel Trends | Portfolio</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+
   <title>About | Portfolio</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="styles.css" />
