--- a/Forc_vs_Actual.html
+++ b/Forc_vs_Actual.html
@@ -12,6 +12,26 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://aymansalem.github.io/portfolio/Forc_vs_Actual.html" />
   <meta property="og:image" content="https://yourdomain.com/assets/preview-booking.png" />
+  <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebPage",
+  "name": "Hotel Analytics Projects | Ayman Salem",
+  "url": "https://aymansalem.github.io/portfolio/projects.html",
+  "description": "Explore advanced hotel analytics projects using Tableau and SQL for forecasting, revenue optimization, and performance analysis."
+}
+</script>
+
+  <title>Hotel Trends | Portfolio</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
   <link rel="canonical" href="https://aymansalem.github.io/portfolio/Forc_vs_Actual.html" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="styles.css" />
