--- a/forecast.html
+++ b/forecast.html
@@ -6,6 +6,26 @@
   <title>Forecast vs Actual | Hotel Data Analysis</title>
   <meta name="description" content="Compare forecasted and actual hotel performance by room nights, revenue, and ADR. Track segment-level accuracy and refine predictive models with visual insights." />
   <meta name="keywords" content="hotel forecast analysis, actual vs forecast, ADR forecast accuracy, booking variance, revenue forecast, segment-level performance" />
+  <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebPage",
+  "name": "Hotel Analytics Projects | Ayman Salem",
+  "url": "https://aymansalem.github.io/portfolio/projects.html",
+  "description": "Explore advanced hotel analytics projects using Tableau and SQL for forecasting, revenue optimization, and performance analysis."
+}
+</script>
+
+  <title>Hotel Trends | Portfolio</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="styles.css" />
 </head>
