--- a/hotel_trends.html
+++ b/hotel_trends.html
@@ -4,6 +4,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebPage",
+  "name": "Hotel Analytics Projects | Ayman Salem",
+  "url": "https://aymansalem.github.io/portfolio/projects.html",
+  "description": "Explore advanced hotel analytics projects using Tableau and SQL for forecasting, revenue optimization, and performance analysis."
+}
+</script>
+
   <title>Hotel Trends | Portfolio</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="styles.css" />
