--- a/index.html
+++ b/index.html
@@ -19,19 +19,37 @@
   <meta property="og:image" content="https://aymansalem.github.io/portfolio/assets/preview.jpg" />
 
   <!-- Structured Data (JSON-LD) -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "WebSite",
-    "name": "Ayman Salem Portfolio",
-    "url": "https://aymansalem.github.io/",
-    "potentialAction": {
-      "@type": "SearchAction",
-      "target": "https://aymansalem.github.io/?q={search_term_string}",
-      "query-input": "required name=search_term_string"
+ <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebPage",
+  "name": "Hotel Analytics Portfolio | Ayman Salem",
+  "url": "https://aymansalem.github.io/portfolio/",
+  "description": "Explore hotel data analytics projects using Tableau, SQL, and Python. Focused on booking pace, ADR, forecast accuracy, and revenue trends."
+}
+</script>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [
+    {
+      "@type": "ListItem",
+      "position": 1,
+      "name": "Home",
+      "item": "https://aymansalem.github.io/"
+    },
+    {
+      "@type": "ListItem",
+      "position": 2,
+      "name": "Portfolio",
+      "item": "https://aymansalem.github.io/portfolio/"
     }
-  }
-  </script>
+  ]
+}
+</script>
+
 
 
 
