--- a/about.html
+++ b/about.html
@@ -6,22 +6,23 @@
 
   <!-- JSON-LD Structured Data for Person -->
   <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Person",
-    "name": "Ayman Salem",
-    "url": "https://aymansalem.github.io/",
-    "sameAs": [
-      "https://www.linkedin.com/in/ayman-h-salem/",
-      "https://github.com/aymansalem"
-    ],
-    "jobTitle": "Hotel Revenue Optimization Specialist",
-    "worksFor": {
-      "@type": "Organization",
-      "name": "Independent Portfolio"
-    }
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Ayman Salem",
+  "url": "https://aymansalem.github.io/",
+  "sameAs": [
+    "https://www.linkedin.com/in/ayman-h-salem/",
+    "https://github.com/aymansalem"
+  ],
+  "jobTitle": "Hotel Data Analyst",
+  "alumniOf": {
+    "@type": "CollegeOrUniversity",
+    "name": "Alexandria University"
   }
-  </script>
+}
+</script>
+
 
   <title>Hotel Trends | Portfolio</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
