--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
   "@context": "https://schema.org",
   "@type": "Person",
   "name": "Ayman Salem",
-  "url": "https://aymansalem.github.io/",
+  "url": "https://aymansalem.github.io/portfolio/about",
   "sameAs": [
     "https://www.linkedin.com/in/ayman-h-salem/",
     "https://github.com/aymansalem"
