--- a/about.html
+++ b/about.html
@@ -5,23 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- JSON-LD Structured Data for Person -->
-  <script type="application/ld+json">
+ <!-- === ABOUT PAGE === -->
+<!-- File: about.html -->
+<link rel="canonical" href="https://aymansalem.github.io/portfolio/about.html" />
+<script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "Person",
-  "name": "Ayman Salem",
-  "url": "https://aymansalem.github.io/portfolio/about",
-  "sameAs": [
-    "https://www.linkedin.com/in/ayman-h-salem/",
-    "https://github.com/aymansalem"
-  ],
-  "jobTitle": "Hotel Data Analyst",
-  "alumniOf": {
-    "@type": "CollegeOrUniversity",
-    "name": "Alexandria University"
+  "@type": "ProfilePage",
+  "url": "https://aymansalem.github.io/portfolio/about.html",
+  "mainEntity": {
+    "@type": "Person",
+    "name": "Ayman Salem",
+    "jobTitle": "Hotel Data Analyst",
+    "sameAs": [
+      "https://www.linkedin.com/in/ayman-h-salem/"
+    ]
   }
 }
 </script>
+
 
 
   <title>Hotel Trends | Portfolio</title>
