--- a/booking_pace.html
+++ b/booking_pace.html
@@ -13,22 +13,29 @@
   <meta property="og:url" content="https://aymansalem.github.io/portfolio/adr.html" />
   <meta property="og:image" content="https://aymansalem.github.io/portfolio/assets/preview-adr.png" />
 
-
-
-  <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script type="application/ld+json">
+<!-- === BOOKING PACE PAGE === -->
+<!-- File: booking_pace.html -->
+<link rel="canonical" href="https://aymansalem.github.io/portfolio/booking_pace.html" />
+<meta name="keywords" content="Booking Pace, Hotel Data Analytics, Booking Trends, OTB Analysis, Ayman Salem, Tableau" />
+<meta name="description" content="Visualize booking pace trends using Tableau dashboards. Compare On-the-Books data vs last year to identify booking shifts." />
+<meta property="og:image" content="https://aymansalem.github.io/portfolio/assets/booking-pace-preview.jpg" />
+<script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "WebPage",
-  "name": "Hotel Analytics Projects | Ayman Salem",
-  "url": "https://aymansalem.github.io/portfolio/projects.html",
-  "description": "Explore advanced hotel analytics projects using Tableau and SQL for forecasting, revenue optimization, and performance analysis."
+  "@type": "TechArticle",
+  "headline": "Hotel Booking Pace Analysis",
+  "url": "https://aymansalem.github.io/portfolio/booking_pace.html",
+  "description": "This dashboard compares current On-the-Books bookings vs last year and forecast. Identify demand patterns and lead times using data analytics.",
+  "author": {
+    "@type": "Person",
+    "name": "Ayman Salem"
+  }
 }
 </script>
+
+
+
+ 
 
   <title>Hotel Trends | Portfolio</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
