--- a/adr.html
+++ b/adr.html
@@ -13,6 +13,29 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://aymansalem.github.io/portfolio/adr.html" />
   <meta property="og:image" content="https://aymansalem.github.io/portfolio/assets/preview-adr.png" />
+
+  <!-- === ADR PAGE === -->
+<!-- File: adr.html -->
+<link rel="canonical" href="https://aymansalem.github.io/portfolio/adr.html" />
+<meta name="keywords" content="ADR, Average Daily Rate, Revenue Analytics, Hotel Pricing, Tableau, Hospitality Revenue Management" />
+<meta name="description" content="Analyze ADR trends across segments. Use Tableau to compare actual vs OTB rates and identify opportunities to optimize hotel pricing." />
+<meta property="og:image" content="https://aymansalem.github.io/portfolio/assets/adr-preview.jpg" />
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "TechArticle",
+  "headline": "ADR Analysis Dashboard",
+  "url": "https://aymansalem.github.io/portfolio/adr.html",
+  "description": "Explore segment-level ADR and pricing trends. Compare OTB and actual performance to improve pricing strategy.",
+  "author": {
+    "@type": "Person",
+    "name": "Ayman Salem"
+  }
+}
+</script>
+
+  
+  
   <link rel="canonical" href="https://aymansalem.github.io/portfolio/adr.html" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="styles.css" />
