--- a/forecast.html
+++ b/forecast.html
@@ -11,15 +11,26 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script type="application/ld+json">
+ <!-- === FORECAST PAGE === -->
+<!-- File: forecast.html -->
+<link rel="canonical" href="https://aymansalem.github.io/portfolio/forecast.html" />
+<meta name="keywords" content="Hotel Forecast, Revenue Forecast, Forecast Accuracy, OTB Forecasting, SQL, Tableau, Hospitality KPIs" />
+<meta name="description" content="Track hotel performance against forecast. This dashboard visualizes forecast accuracy, RevPAR trends, and booking variance." />
+<meta property="og:image" content="https://aymansalem.github.io/portfolio/assets/forecast-preview.jpg" />
+<script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "WebPage",
-  "name": "Hotel Analytics Projects | Ayman Salem",
-  "url": "https://aymansalem.github.io/portfolio/projects.html",
-  "description": "Explore advanced hotel analytics projects using Tableau and SQL for forecasting, revenue optimization, and performance analysis."
+  "@type": "TechArticle",
+  "headline": "Hotel Forecast Accuracy Dashboard",
+  "url": "https://aymansalem.github.io/portfolio/forecast.html",
+  "description": "Compare forecast vs actual hotel performance. Understand accuracy and performance by date and segment.",
+  "author": {
+    "@type": "Person",
+    "name": "Ayman Salem"
+  }
 }
 </script>
+
 
   <title>Hotel Trends | Portfolio</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
