--- a/about.html
+++ b/about.html
@@ -7,22 +7,37 @@
   <!-- JSON-LD Structured Data for Person -->
  <!-- === ABOUT PAGE === -->
 <!-- File: about.html -->
-<link rel="canonical" href="https://aymansalem.github.io/portfolio/about.html" />
+<link rel="canonical" href="https://aymansalem.github.io/about">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "ProfilePage",
-  "url": "https://aymansalem.github.io/portfolio/about.html",
-  "mainEntity": {
-    "@type": "Person",
-    "name": "Ayman Salem",
-    "jobTitle": "Hotel Data Analyst",
-    "sameAs": [
-      "https://www.linkedin.com/in/ayman-h-salem/"
-    ]
-  }
+  "@type": "WebPage",
+  "name": "About Ayman Salem",
+  "description": "About Ayman Salem – Experienced Hotel Revenue Management & Data Analytics Professional.",
+  "url": "https://aymansalem.github.io/about"
 }
 </script>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [
+    {
+      "@type": "ListItem",
+      "position": 1,
+      "name": "Home",
+      "item": "https://aymansalem.github.io/"
+    },
+    {
+      "@type": "ListItem",
+      "position": 2,
+      "name": "About",
+      "item": "https://aymansalem.github.io/about"
+    }
+  ]
+}
+</script>
+
 
 
 
