--- a/booking_pace.html
+++ b/booking_pace.html
@@ -14,24 +14,37 @@
   <meta property="og:image" content="https://aymansalem.github.io/portfolio/assets/preview-adr.png" />
 
 <!-- === BOOKING PACE PAGE === -->
-<!-- File: booking_pace.html -->
-<link rel="canonical" href="https://aymansalem.github.io/portfolio/booking_pace.html" />
-<meta name="keywords" content="Booking Pace, Hotel Data Analytics, Booking Trends, OTB Analysis, Ayman Salem, Tableau" />
-<meta name="description" content="Visualize booking pace trends using Tableau dashboards. Compare On-the-Books data vs last year to identify booking shifts." />
-<meta property="og:image" content="https://aymansalem.github.io/portfolio/assets/booking-pace-preview.jpg" />
+<link rel="canonical" href="https://aymansalem.github.io/booking_pace">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "TechArticle",
-  "headline": "Hotel Booking Pace Analysis",
-  "url": "https://aymansalem.github.io/portfolio/booking_pace.html",
-  "description": "This dashboard compares current On-the-Books bookings vs last year and forecast. Identify demand patterns and lead times using data analytics.",
-  "author": {
-    "@type": "Person",
-    "name": "Ayman Salem"
-  }
+  "@type": "CreativeWork",
+  "name": "Booking Pace Analysis",
+  "description": "Project analyzing hotel booking pace and lead time using Tableau and PostgreSQL.",
+  "url": "https://aymansalem.github.io/booking_pace"
 }
 </script>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [
+    {
+      "@type": "ListItem",
+      "position": 1,
+      "name": "Home",
+      "item": "https://aymansalem.github.io/"
+    },
+    {
+      "@type": "ListItem",
+      "position": 2,
+      "name": "Booking Pace",
+      "item": "https://aymansalem.github.io/booking_pace"
+    }
+  ]
+}
+</script>
+
 
 
 
