--- a/adr.html
+++ b/adr.html
@@ -15,24 +15,38 @@
   <meta property="og:image" content="https://aymansalem.github.io/portfolio/assets/preview-adr.png" />
 
   <!-- === ADR PAGE === -->
-<!-- File: adr.html -->
-<link rel="canonical" href="https://aymansalem.github.io/portfolio/adr.html" />
-<meta name="keywords" content="ADR, Average Daily Rate, Revenue Analytics, Hotel Pricing, Tableau, Hospitality Revenue Management" />
-<meta name="description" content="Analyze ADR trends across segments. Use Tableau to compare actual vs OTB rates and identify opportunities to optimize hotel pricing." />
-<meta property="og:image" content="https://aymansalem.github.io/portfolio/assets/adr-preview.jpg" />
+<!-- ADR Project (adr.html) -->
+<link rel="canonical" href="https://aymansalem.github.io/adr">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "TechArticle",
-  "headline": "ADR Analysis Dashboard",
-  "url": "https://aymansalem.github.io/portfolio/adr.html",
-  "description": "Explore segment-level ADR and pricing trends. Compare OTB and actual performance to improve pricing strategy.",
-  "author": {
-    "@type": "Person",
-    "name": "Ayman Salem"
-  }
+  "@type": "Dataset",
+  "name": "ADR Trends and Optimization",
+  "description": "Average Daily Rate (ADR) trends and optimization techniques visualized using Tableau dashboards.",
+  "url": "https://aymansalem.github.io/adr"
 }
 </script>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [
+    {
+      "@type": "ListItem",
+      "position": 1,
+      "name": "Home",
+      "item": "https://aymansalem.github.io/"
+    },
+    {
+      "@type": "ListItem",
+      "position": 2,
+      "name": "ADR",
+      "item": "https://aymansalem.github.io/adr"
+    }
+  ]
+}
+</script>
+
 
   
   
