--- a/forecast.html
+++ b/forecast.html
@@ -12,24 +12,38 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
  <!-- === FORECAST PAGE === -->
-<!-- File: forecast.html -->
-<link rel="canonical" href="https://aymansalem.github.io/portfolio/forecast.html" />
-<meta name="keywords" content="Hotel Forecast, Revenue Forecast, Forecast Accuracy, OTB Forecasting, SQL, Tableau, Hospitality KPIs" />
-<meta name="description" content="Track hotel performance against forecast. This dashboard visualizes forecast accuracy, RevPAR trends, and booking variance." />
-<meta property="og:image" content="https://aymansalem.github.io/portfolio/assets/forecast-preview.jpg" />
+<!-- Forecast Project (forecast.html) -->
+<link rel="canonical" href="https://aymansalem.github.io/forecast">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "TechArticle",
-  "headline": "Hotel Forecast Accuracy Dashboard",
-  "url": "https://aymansalem.github.io/portfolio/forecast.html",
-  "description": "Compare forecast vs actual hotel performance. Understand accuracy and performance by date and segment.",
-  "author": {
-    "@type": "Person",
-    "name": "Ayman Salem"
-  }
+  "@type": "CreativeWork",
+  "name": "Hotel Forecasting Models",
+  "description": "Hotel revenue forecasting models using historical booking data and demand analysis.",
+  "url": "https://aymansalem.github.io/forecast"
 }
 </script>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [
+    {
+      "@type": "ListItem",
+      "position": 1,
+      "name": "Home",
+      "item": "https://aymansalem.github.io/"
+    },
+    {
+      "@type": "ListItem",
+      "position": 2,
+      "name": "Forecast",
+      "item": "https://aymansalem.github.io/forecast"
+    }
+  ]
+}
+</script>
+
 
 
   <title>Hotel Trends | Portfolio</title>
