--- a/forecast.html
+++ b/forecast.html
@@ -5,12 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Forecast vs Actual | Hotel Data Analysis</title>
   <meta name="description" content="Compare forecasted and actual hotel performance by room nights, revenue, and ADR. Track segment-level accuracy and refine predictive models with visual insights." />
-  <meta name="keywords" content="hotel forecast analysis, actual vs forecast, ADR forecast accuracy, booking variance, revenue forecast, segment-level performance" />
-  <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta name="keywords" content="Hotel Revenue Management, Booking Pace, ADR Trends, Forecast Accuracy, Hospitality Analytics, Revenue Optimization, Hotel Data Insights, Market Segmentation, Hotel Portfolio, Hospitality Projects, Ayman Salem Portfolio, Tableau Dashboard, SQL Data Analysis, Hotel Industry Metrics, Hotel Forecast Models, Demand Forecasting, Hotel Occupancy Trends, Hotel Business Intelligence">  
+
+
  <!-- === FORECAST PAGE === -->
 <!-- Forecast Project (forecast.html) -->
 <link rel="canonical" href="https://aymansalem.github.io/forecast">
