--- a/about.html
+++ b/about.html
@@ -3,53 +3,42 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Forecast vs Actual | Hotel Data Analysis</title>
+  <meta name="description" content="Compare forecasted and actual hotel performance by room nights, revenue, and ADR. Track segment-level accuracy and refine predictive models with visual insights." />
+  <meta name="keywords" content="Hotel Revenue Management, Booking Pace, ADR Trends, Forecast Accuracy, Hospitality Analytics, Revenue Optimization, Hotel Data Insights, Market Segmentation, Hotel Portfolio, Hospitality Projects, Ayman Salem Portfolio, Tableau Dashboard, SQL Data Analysis, Hotel Industry Metrics, Hotel Forecast Models, Demand Forecasting, Hotel Occupancy Trends, Hotel Business Intelligence" />
+  <link rel="canonical" href="https://aymansalem.github.io/forecast" />
 
-  <!-- JSON-LD Structured Data for Person -->
- <!-- === ABOUT PAGE === -->
-<!-- File: about.html -->
-<link rel="canonical" href="https://aymansalem.github.io/about">
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "WebPage",
-  "name": "About Ayman Salem",
-  "description": "About Ayman Salem – Experienced Hotel Revenue Management & Data Analytics Professional.",
-  "url": "https://aymansalem.github.io/about"
-}
-</script>
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "BreadcrumbList",
-  "itemListElement": [
-    {
-      "@type": "ListItem",
-      "position": 1,
-      "name": "Home",
-      "item": "https://aymansalem.github.io/"
-    },
-    {
-      "@type": "ListItem",
-      "position": 2,
-      "name": "About",
-      "item": "https://aymansalem.github.io/about"
-    }
-  ]
-}
-</script>
+  <!-- JSON-LD Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Forecast vs Actual | Hotel Data Analysis",
+    "description": "Compare forecasted and actual hotel performance by room nights, revenue, and ADR.",
+    "url": "https://aymansalem.github.io/forecast"
+  }
+  </script>
 
-
-
-
-  <title>Hotel Trends | Portfolio</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="styles.css" />
-</head>
-<body>
-
-  <title>About | Portfolio</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="styles.css" />
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://aymansalem.github.io/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Forecast vs Actual",
+        "item": "https://aymansalem.github.io/forecast"
+      }
+    ]
+  }
+  </script>
 </head>
 <body>
 
