--- a/about.html
+++ b/about.html
@@ -3,22 +3,24 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Forecast vs Actual | Hotel Data Analysis</title>
-  <meta name="description" content="Compare forecasted and actual hotel performance by room nights, revenue, and ADR. Track segment-level accuracy and refine predictive models with visual insights." />
-  <meta name="keywords" content="Hotel Revenue Management, Booking Pace, ADR Trends, Forecast Accuracy, Hospitality Analytics, Revenue Optimization, Hotel Data Insights, Market Segmentation, Hotel Portfolio, Hospitality Projects, Ayman Salem Portfolio, Tableau Dashboard, SQL Data Analysis, Hotel Industry Metrics, Hotel Forecast Models, Demand Forecasting, Hotel Occupancy Trends, Hotel Business Intelligence" />
-  <link rel="canonical" href="https://aymansalem.github.io/forecast" />
 
-  <!-- JSON-LD Structured Data -->
+  <title>About Ayman Salem | Hotel Revenue Management Professional</title>
+  <meta name="description" content="Learn more about Ayman Salem, a hotel revenue management expert with 17+ years of experience in hospitality analytics, forecasting, and digital strategy." />
+  <meta name="keywords" content="Ayman Salem, Hotel Revenue Manager, Hospitality Analytics, Revenue Optimization, About Ayman, Hotel Forecasting Expert, Hospitality Portfolio, Hotelier Hub, Hospitality Management, About Me, Hotel Strategy, Revenue Projects, Hotel Data Expert" />
+  <link rel="canonical" href="https://aymansalem.github.io/about" />
+
+  <!-- JSON-LD Structured Data for WebPage -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "WebPage",
-    "name": "Forecast vs Actual | Hotel Data Analysis",
-    "description": "Compare forecasted and actual hotel performance by room nights, revenue, and ADR.",
-    "url": "https://aymansalem.github.io/forecast"
+    "name": "About Ayman Salem",
+    "description": "About Ayman Salem – Experienced Hotel Revenue Management & Data Analytics Professional.",
+    "url": "https://aymansalem.github.io/about"
   }
   </script>
 
+  <!-- Breadcrumb Structured Data -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -33,14 +35,18 @@
       {
         "@type": "ListItem",
         "position": 2,
-        "name": "Forecast vs Actual",
-        "item": "https://aymansalem.github.io/forecast"
+        "name": "About",
+        "item": "https://aymansalem.github.io/about"
       }
     ]
   }
   </script>
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+
 
 <!-- Navigation Bar -->
 <nav class="navbar navbar-expand-lg bg-purple">
