--- a/forecast.html
+++ b/forecast.html
@@ -14,32 +14,30 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "CreativeWork",
-  "name": "Hotel Forecasting Models",
-  "description": "Hotel revenue forecasting models using historical booking data and demand analysis.",
-  "url": "https://aymansalem.github.io/forecast"
-}
-</script>
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
   "@type": "BreadcrumbList",
   "itemListElement": [
     {
       "@type": "ListItem",
       "position": 1,
       "name": "Home",
-      "item": "https://aymansalem.github.io/"
+      "item": {
+        "@type": "WebPage",
+        "@id": "https://aymansalem.github.io/"
+      }
     },
     {
       "@type": "ListItem",
       "position": 2,
       "name": "Forecast",
-      "item": "https://aymansalem.github.io/forecast"
+      "item": {
+        "@type": "WebPage",
+        "@id": "https://aymansalem.github.io/portfolio/forecast"
+      }
     }
   ]
 }
 </script>
+
 
 
 
