--- a/about.html
+++ b/about.html
@@ -9,18 +9,7 @@
   <meta name="keywords" content="Ayman Salem, Hotel Revenue Manager, Hospitality Analytics, Revenue Optimization, About Ayman, Hotel Forecasting Expert, Hospitality Portfolio, Hotelier Hub, Hospitality Management, About Me, Hotel Strategy, Revenue Projects, Hotel Data Expert" />
   <link rel="canonical" href="https://aymansalem.github.io/about" />
 
-  <!-- JSON-LD Structured Data for WebPage -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "WebPage",
-    "name": "About Ayman Salem",
-    "description": "About Ayman Salem – Experienced Hotel Revenue Management & Data Analytics Professional.",
-    "url": "https://aymansalem.github.io/about"
-  }
-  </script>
-
-  <!-- Breadcrumb Structured Data -->
+  <!-- Structured Data: BreadcrumbList -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -36,12 +25,13 @@
         "@type": "ListItem",
         "position": 2,
         "name": "About",
-        "item": "https://aymansalem.github.io/about"
+        "item": "https://aymansalem.github.io/about/"
       }
     ]
   }
   </script>
 
+  <!-- CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="styles.css" />
 </head>
