--- a/adr.html
+++ b/adr.html
@@ -16,7 +16,7 @@
 
   <!-- === ADR PAGE === -->
 <!-- ADR Project (adr.html) -->
-<link rel="canonical" href="https://aymansalem.github.io/adr">
+<link rel="canonical" href="https://aymansalem.github.io/portfolio/adr.html">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
