--- a/booking_pace.html
+++ b/booking_pace.html
@@ -14,7 +14,7 @@
   <meta property="og:image" content="https://aymansalem.github.io/portfolio/assets/preview-adr.png" />
 
 <!-- === BOOKING PACE PAGE === -->
-<link rel="canonical" href="https://aymansalem.github.io/booking_pace">
+<link rel="canonical" href="https://aymansalem.github.io/booking_pace.html" />
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
