--- a/forecast.html
+++ b/forecast.html
@@ -10,7 +10,7 @@
 
  <!-- === FORECAST PAGE === -->
 <!-- Forecast Project (forecast.html) -->
-<link rel="canonical" href="https://aymansalem.github.io/forecast">
+<link rel="canonical" href="https://aymansalem.github.io/forecast.html /">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
